# ACE

./: README.md  pyproject.toml  requirements.txt
ace_code/: __init__.py  pipeline.py
ace_code/core/: __init__.py  activations.py  model.py
ace_code/data/: __init__.py  datasets.py  mutation.py
ace_code/detection/: __init__.py  feature_analysis.py  sae_detector.py
ace_code/discovery/: __init__.py  cdt.py  pahq.py
ace_code/intervention/: __init__.py  pisces.py  steering.py
ace_code/sae_anomaly/: __init__.py  detector.py  discovery.py  pipeline.py  sae.py  sidecar.py  trainer.py
ace_code/utils/: __init__.py  device.py  logging.py  statistics.py
configs/: default.yaml
scripts/: compute_steering.py  run_analysis.py  run_detection.py  run_discovery.py  train_sae.py
tests/: __init__.py  test_detector.py  test_mutation.py  test_sae.py  test_statistics.py  test_steering.py  test_trainer.py
