[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ace-code"
version = "0.1.0"
description = "Automated Circuit Extraction for Code Models - Mechanistic Interpretability Toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "ACE-Code Team"}
]
keywords = [
    "mechanistic-interpretability",
    "transformers",
    "circuit-discovery",
    "sparse-autoencoders",
    "code-models"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "transformer_lens>=1.0.0",
    "sae_lens>=1.0.0",
    "accelerate>=0.20.0",
    "bitsandbytes>=0.40.0",
    "einops>=0.6.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "tree-sitter>=0.20.0",
    "datasets>=2.12.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
    "omegaconf>=2.3.0",
    "typing_extensions>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "ruff>=0.0.270",
]

[project.urls]
"Homepage" = "https://github.com/tektonics/ACE"
"Bug Tracker" = "https://github.com/tektonics/ACE/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ace_code*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
